--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sass": "sass --watch styles/style.scss styles/style.css && postcss styles/style.css --output style.css --no-map --use autoprefixer --watch"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.8",
     "next": "12.2.3",
+    "qs": "^6.11.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
