--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.54.0"
   },
   "devDependencies": {
+    "concurrently": "^7.3.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3"
   }
